--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+.app {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  -webkit-font-smoothing: subpixel-antialiased;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todos {
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todos__input {
+  font-family: 'Montserrat', sans-serif;
+  border: none;
+  outline: none;
+  width: 100%;
+  padding: 1em;
+  font-size: 1em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.priority {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.priority, .priority__wrapper {
+  font-size: 0.8em;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.priority input {
+  margin: 0 10px;
+}
+
+.priority label>span {
+  text-transform: capitalize;
+}
+
+.update-todo {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+}
+
+.update-todo__content {
+  padding: 1em;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  width: 300px;
+  height: 200px;
+  background-color: #ffffff;
+  border-radius: 3px;
+  position: relative;
+  box-shadow: 2px 0 12px rgba(0, 0, 0, 0.4);
+}
+
+.update-todo__content form {
+  display: grid;
+  grid-template-rows: 5% auto;
+  grid-gap: 10px;
+}
+
+.update-todo__content .MuiSvgIcon-root {
+  font-size: 1em;
+  justify-self: end;
+  cursor: pointer;
+}
+
+.update-todo--hidden {
+  display: none;
 }
