--- a/src/todo/Todo.css
+++ b/src/todo/Todo.css
@@ -72,6 +72,7 @@
     will-change: transform;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .todo:hover {
