--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,16 @@
 
 .todos {
   position: relative;
+  height: 400px;
+  overflow: auto;
+}
+
+.todos__form {
+  position: fixed;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 90%;
 }
 
 .todos__input {
@@ -43,6 +53,9 @@
   background: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
+  transform: scale(0);
+  opacity: 0;
+  transition: transform, opacity 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .update-todo__content {
@@ -69,6 +82,38 @@
   cursor: pointer;
 }
 
-.update-todo--hidden {
-  display: none;
+.update-todo--show {
+  transform: scale(1);
+  opacity: 1;
+}
+
+button.expand-collapse-btn {
+  position: fixed;
+  right: 0;
+  transition: opacity 0.2s linear;
+}
+
+button.collapse--hide {
+  opacity: 0;
+}
+
+.todos__header {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  background: linear-gradient(90deg, rgba(222, 73, 71, 1) 29%, rgba(61, 113, 213, 1) 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.todos__header > h1 {
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.todos__logo {
+  height: 100px;
+  object-fit: contain;
 }
