added max-width to form element

--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@
   display: grid;
   grid-template-rows: 5% auto;
   grid-gap: 10px;
+  max-width: 400px;
 }
 
 .update-todo__content .MuiSvgIcon-root {
