--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 90%;
+  max-width: 400px
 }
 
 .todos__input {
@@ -74,7 +75,6 @@
   display: grid;
   grid-template-rows: 5% auto;
   grid-gap: 10px;
-  max-width: 400px;
 }
 
 .update-todo__content .MuiSvgIcon-root {
